[metadata]
name = dsp
description = an app about psychological evaluation questionnaires
author = Carlo Eusebi
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    dsp
    website
    utils
install_requires =
    requests>=2
    inquirerpy>=0.3.4
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160